# mcc-1

./: list-modules.py  meson.build  meson_options.txt  modules-opensource.json  pack-sources.py  pull-head-tracking-subprojects.py  readme.txt  test.cppcheck
plugins/dialog-channel-add/: AddChannelDialogPlugin.cpp  meson.build
plugins/dialog-uav-add/: AddUavDialogPlugin.cpp  meson.build
plugins/dialog-uav-edit/: EditUavDialog.cpp  EditUavDialog.h  EditUavDialogPlugin.cpp  meson.build
plugins/net-mavlink/: Firmware.cpp  Firmware.h  Plugin.cpp  meson.build  net-mavlink.qrc
plugins/net-mavlink/broker/: Broker.cpp  Broker.h  Channel.cpp  Channel.h  Connections.cpp  Connections.h  Device.cpp  Device.h  Exchanger.h  LogWriter.cpp  LogWriter.h  Request.h
plugins/net-mavlink/device/: Device.cpp  Device.h  Mavlink.cpp  Mavlink.h  MavlinkUtils.cpp  MavlinkUtils.h  Px4Fsm.cpp  Px4Fsm.h  Route.h  Tm.cpp  Tm.h
plugins/net-mavlink/traits/: Trait.h  TraitJoystick.cpp  TraitJoystick.h  TraitParams.cpp  TraitParams.h  TraitRadioCalibration.cpp  TraitRadioCalibration.h  TraitRegistrator.cpp  TraitRegistrator.h  TraitRoutes.cpp  TraitRoutes.h  TraitSensorCalibration.cpp  TraitSensorCalibration.h
plugins/net-mavlink/widgets/: AirframeViewDelegate.h  AirframeWidget.cpp  AirframeWidget.h  AirframesModel.cpp  AirframesModel.h  FirmwareModel.cpp  FirmwareModel.h  FirmwareWidget.cpp  FirmwareWidget.h  MavlinkMonitorWidget.cpp  MavlinkMonitorWidget.h  MavlinkParametersWidget.cpp  MavlinkParametersWidget.h  MavlinkToolbarWidget.cpp  MavlinkToolbarWidget.h  ParameterEditor.cpp  ParameterEditor.h
plugins/net-photon/: Firmware.cpp  Firmware.h  Plugin.cpp  meson.build  net-photon.qrc
plugins/net-photon/broker/: Broker.cpp  Broker.h  Channel.cpp  Channel.h  Connections.cpp  Connections.h  Device.cpp  Device.h  Exchanger.cpp  Exchanger.h  Request.h
plugins/net-photon/device/: Device.cpp  Device.h  FileReader.cpp  FileReader.h
plugins/net-photon/traits/: Trait.h  TraitRadioCalibration.cpp  TraitRadioCalibration.h
plugins/net-photon/widgets/: DeviceFirmwarePage.cpp  DeviceFirmwarePage.h  FirmwareWidget.cpp  FirmwareWidget.h  MccNodeViewModel.h
plugins/qml/: OpenQmlFileDialog.cpp  OpenQmlFileDialog.h  QmlPlugin.cpp  meson.build
plugins/settingspage-global/: GlobalSettingsPage.cpp  GlobalSettingsPage.h  GlobalSettingsPage.ui  meson.build
plugins/settingspage-gps/: GpsSettingsPage.cpp  GpsSettingsPage.h  GpsSettingsPage.ui  meson.build  settingspage-gps.qrc
plugins/toolbar-channels/: ChannelsListDelegate.cpp  ChannelsListDelegate.h  ChannelsListModel.cpp  ChannelsListModel.h  ChannelsListView.cpp  ChannelsListView.h  ChannelsPlugin.cpp  ChannelsPropertiesDialog.cpp  ChannelsPropertiesDialog.h  ChannelsPropertiesWidget.cpp  ChannelsPropertiesWidget.h  ChannelsWidget.cpp  ChannelsWidget.h  meson.build  toolbar-channels.qrc
plugins/toolbar-coordinatesystem/: CoordinateConverterTool.cpp  CoordinateConverterTool.h  CoordinateSystemPlugin.cpp  CoordinateSystemPropertiesDialog.cpp  CoordinateSystemPropertiesDialog.h  CoordinateSystemSettingsPage.cpp  CoordinateSystemSettingsPage.h  CoordinateSystemWidget.cpp  CoordinateSystemWidget.h  meson.build  toolbar-coordinatesystem.qrc
plugins/toolbar-selecteduav/: AbstractUavWidget.cpp  AbstractUavWidget.h  SelectedUavPlugin.cpp  SelectedUavWidget.cpp  SelectedUavWidget.h  ToolbarUavSettingsPage.cpp  ToolbarUavSettingsPage.h  UavFailureWidget.cpp  UavFailureWidget.h  UavModeWidget.cpp  UavModeWidget.h  UavNameWidget.cpp  UavNameWidget.h  UavStatisticsWidget.cpp  UavStatisticsWidget.h  UavWidget.cpp  UavWidget.h  UavsDialog.cpp  UavsDialog.h  meson.build  toolbar-selecteduav.qrc
plugins/toolbar-timer/: Plugin.cpp  Plugin.qrc  StopwatchTimerBaseWidget.cpp  StopwatchTimerBaseWidget.h  StopwatchTimerStatusWidget.cpp  StopwatchTimerStatusWidget.h  StopwatchTimerTool.cpp  StopwatchTimerTool.h  Types.h  meson.build
plugins/uiexch-net/: CafPlugin.cpp  CafService.cpp  CafService.h  meson.build
plugins/widget-logmessages/: EventViewer.cpp  EventViewer.h  MessageListTool.cpp  MessageListTool.h  Plugin.cpp  logmessages.qrc  meson.build
plugins/widget-plot/: PlotCurve.cpp  PlotCurve.h  PlotTool.cpp  PlotTool.h  PlotWidget.cpp  PlotWidget.h  PlotWidgetPlugin.cpp  meson.build
plugins/widget-routes/: MissionPlanDelegate.cpp  MissionPlanDelegate.h  MissionPlanModel.cpp  MissionPlanModel.h  Plugin.cpp  RouteEditorTool.cpp  RouteEditorTool.h  RouteListFilterModel.cpp  RouteListFilterModel.h  RouteListModel.cpp  RouteListModel.h  RouteListTreeView.cpp  RouteListTreeView.h  ScanAreaDialog.cpp  ScanAreaDialog.h  TableViewWithFreezeSelection.cpp  TableViewWithFreezeSelection.h  meson.build  widget-routes.qrc
plugins/widget-routes/uifiles/: ScanAreaDialog.ui
plugins/widget-routeshape/: CanvasPicker.cpp  CanvasPicker.h  RouteCurve.cpp  RouteCurve.h  RouteSectionPlot.cpp  RouteSectionPlot.h  RouteSectionWidgetPlugin.cpp  RouteShapeWidgetPlugin.qrc  meson.build
plugins/widget-sessions/: DeviceItem.cpp  DeviceItem.h  DeviceListView.cpp  DeviceListView.h  Plugin.cpp  ScreenRecorder.cpp  ScreenRecorder.h  SessionTool.cpp  SessionTool.h  SessionsModel.cpp  SessionsModel.h  SessionsWidget.cpp  SessionsWidget.h  SettingsPage.cpp  SettingsPage.h  VideoRecordWidget.cpp  VideoRecordWidget.h  meson.build  toolbar-sessions.qrc
src/mcc/3d/: BackgroundedTextItem.cpp  BackgroundedTextItem.h  BasicModels.cpp  BasicModels.h  Fwd.h  Methods.cpp  Methods.h  ProductModel.cpp  ProductModel.h  Scene.cpp  Scene.h  TextInformer.cpp  TextInformer.h  View.cpp  View.h  meson.build
src/mcc/calib/: CalibrationControllerAbstract.h  meson.build  (+16 more)
subprojects/asio/: CMakeLists.txt  meson.build  meson_options.txt
subprojects/caf/: meson.build  meson_options.txt
subprojects/curl/: meson.build
subprojects/decode/: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  decode.xml  meson.build
subprojects/exprtk/: meson.build
subprojects/libkml/: .clang-format  .gitmodules  meson.build
subprojects/lz4/: meson.build
tests/: InspectorTest.cpp  ProfTool.cpp  SrtmTileTool.cpp  meson.build
(+1003 files in other folders)
