#executable('prof-tool',
#  sources : 'ProfTool.cpp',
#  include_directories : mcc_inc,
#  link_with : [],
#  dependencies : [mcc_hm_dep, mcc_vis_dep, tclap_dep, mcc_geo_dep],
#)

#executable('srtm-tile-tool',
#  sources : 'SrtmTileTool.cpp',
#  include_directories : mcc_inc,
#  link_with : [mcc_map_lib],
#  dependencies : [mcc_hm_dep, tclap_dep, mcc_geo_dep, qt5_widgets_dep, mcc_plugin_dep],
#)

executable('inspector-test',
  sources : 'InspectorTest.cpp',
  dependencies : [bmcl_dep, libcaf_core_dep, libcaf_io_dep],
)
